--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "decimal_mask"
+name = "coral-decimal-mask"
 version = "0.2.0"
 description = "Django mask decimal fields"
 authors = ["Coral Sistemas"]
