--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,15 +11,27 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    container:
-      image: python:3.10
+    strategy:
+      matrix:
+        python-version:
+          - "3.8"
+          - "3.9"
+          - "3.10"
+          - "3.11"
+        django-version:
+          - "3.2"
+          - "4.1"
+          - "4.2"
 
     steps:
-    - uses: actions/checkout@v3
-    - uses: abatilo/actions-poetry@v2.3.0
-      with:
-        poetry-version: 1.3.0
-    - name: Test with Django
-      run: |
-        poetry install
-        poetry run pytest --migrations
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+      - uses: abatilo/actions-poetry@v2.2.0
+        with:
+          python-version: ${{ matrix.python-version }}
+          poetry-version: 1.3.0
+      - name: Test with Django
+        run: |
+          poetry install
+          poetry run pip install Django~="${{ matrix.django-version }}"
+          poetry run pytest --migrations
